[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Shopkeeper.png" type="Texture" id=1]
[ext_resource path="res://assets/bg.png" type="Texture" id=2]
[ext_resource path="res://Shop-lvl1.gd" type="Script" id=3]
[ext_resource path="res://LuckPotion-lvl1.gd" type="Script" id=4]
[ext_resource path="res://assets/ARLRDBD.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/audio/403007__inspectorj__ui-confirmation-alert-a2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/264295__foolboymedia__sky-loop.wav" type="AudioStream" id=7]
[ext_resource path="res://ShopTheme.gd" type="Script" id=8]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/ShopBG.png-f62a4ad204514e37f5f96abe7516da4b.stex"

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[node name="Shop" type="Node2D"]

[node name="Spike" type="Sprite" parent="."]
position = Vector2( 1104, 473 )
scale = Vector2( 1.085, 1 )
texture = ExtResource( 1 )

[node name="Background" type="Sprite" parent="Spike"]
show_behind_parent = true
light_mask = 2
position = Vector2( -185.253, -8.99997 )
scale = Vector2( 1.40246, 1 )
texture = ExtResource( 2 )

[node name="Shop-BG" type="Sprite" parent="Spike"]
position = Vector2( -743.779, -218.5 )
scale = Vector2( 0.936035, 2.68362 )
texture = SubResource( 1 )

[node name="LuckOn" type="Label" parent="Spike/Shop-BG"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = -253.053
margin_top = 26.2705
margin_right = 299.947
margin_bottom = 56.2705
rect_scale = Vector2( 1, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "You already have this buff! Try again later."

[node name="NoMoney" type="Label" parent="Spike/Shop-BG"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = -275.699
margin_top = 26.2705
margin_right = 277.301
margin_bottom = 56.2705
rect_scale = Vector2( 1, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "You don't have the money to afford that item."

[node name="Stealing" type="Label" parent="Spike/Shop-BG/NoMoney"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 1123.48
margin_top = -67.0736
margin_right = 1392.48
margin_bottom = -31.0736
custom_fonts/font = SubResource( 2 )
text = "Grrrrr~ No stealing!"

[node name="ESCtoLeave" type="Label" parent="Spike/Shop-BG"]
margin_left = -264.868
margin_top = 202.152
margin_right = 323.132
margin_bottom = 232.152
rect_min_size = Vector2( 0, 0.3 )
rect_scale = Vector2( 1, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "If you'd like, you can use 'ESC' to leave the shop!"

[node name="Label" type="Label" parent="Spike"]
anchor_top = 0.028
anchor_bottom = 0.028
margin_left = -1003.69
margin_top = -455.364
margin_right = -592.687
margin_bottom = -401.364
rect_scale = Vector2( 2, 2 )
text = "Puzzle Piece [100 Points]

Luck Potion [30 Points]"

[node name="Button" type="Button" parent="Spike/Label"]
modulate = Color( 1, 0.992157, 0.992157, 1 )
margin_left = 194.032
margin_top = -1.25269
margin_right = 242.032
margin_bottom = 18.7473
button_mask = 7
text = "Buy!"
script = ExtResource( 3 )

[node name="Button2" type="Button" parent="Spike/Label"]
modulate = Color( 1, 0.992157, 0.992157, 1 )
margin_left = 194.032
margin_top = 30.2473
margin_right = 242.032
margin_bottom = 50.2473
button_mask = 7
text = "Buy!"
script = ExtResource( 4 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
script = ExtResource( 8 )

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 479, 97 )
stream = ExtResource( 6 )
attenuation = 5.46416
